--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -88,8 +88,8 @@ const navItems = [
         ))
       }
       <span class="w-full flex items-center justify-center">
-       <LanguageSwitcher client:load />
-       </span>
+        <LanguageSwitcher client:load />
+      </span>
     </ul>
   </nav>
 
@@ -122,10 +122,10 @@ const navItems = [
     const signUpLink = document.getElementsByClassName("sign-up-link");
 
     for (const link of loginLink) {
-      link.href = `https://app.ionkol.com/${currentLang}/sign-in`;
+      link.href = `https://app.ionkol.com/${currentLang}/login`;
     }
     for (const link of signUpLink) {
-      link.href = `https://app.ionkol.com/${currentLang}/sign-up`;
+      link.href = `https://app.ionkol.com/${currentLang}/signup`;
     }
   }
 
