--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -55,23 +55,31 @@ const titles = [m["main.explore"](), m["main.analyse"](), "AI"];
   <div
     class={`text-[#EE7380] text-[75px] md:text-[100px] flex flex-col mb-4 gap-6 lg:ml-64 lg:flex-row items-center justify-center font-semibold tracking-[2.6px] lg:text-[130px]`}
   >
-    <Image class="max-h-[80px] sm:max-h-full" src="/ion.svg" alt="key" width={240} height={50} />
+    <Image
+      class="max-h-[80px] sm:max-h-full"
+      src="/ion.svg"
+      alt="key"
+      width={240}
+      height={50}
+    />
 
     <div class="animated-box-text h-[200px] lg:h-[250px]">
       <div class="flex flex-row items-center">
         <div class="w-fit lg:min-w-[500px]">
           <div class="w-full flex justify-center lg:justify-normal">
-            <img class="animated-slides-text max-h-[80px] md:max-h-full" alt="SliderText"  />
+            <img
+              class="animated-slides-text max-h-[80px] md:max-h-full"
+              alt="SliderText"
+            />
           </div>
         </div>
-
       </div>
     </div>
   </div>
   <p class="font-normal tracking-wide mb-8 text-[42px]">
     {m["main.dataDriverSuccess"]()}
   </p>
-  <a href="https://app.ionkol.com/en/sign-up">
+  <a href="https://app.ionkol.com/en/signup">
     <button
       class="h-10 px-10 py-2 bg-[#EE7380] rounded-3xl text-white text-base font-medium leading-normal tracking-wide hover:bg-[#1a1a2e] active:bg-[#33334d] transition-colors duration-300"
     >
@@ -81,9 +89,15 @@ const titles = [m["main.explore"](), m["main.analyse"](), "AI"];
 </div>
 
 <script>
-  const images = ["/Explore.svg", "/Analyse.svg", "/AI.svg", "/Link.svg", "/Kol.svg"];
+  const images = [
+    "/Explore.svg",
+    "/Analyse.svg",
+    "/AI.svg",
+    "/Link.svg",
+    "/Kol.svg",
+  ];
   const margins = ["mt-[36px]", "mt-[26px]", "mt-0", "-mt-2"];
-  let index = 0; 
+  let index = 0;
   const container: any = document.querySelector(".animated-slides-text");
 
   if (container) {
@@ -93,13 +107,12 @@ const titles = [m["main.explore"](), m["main.analyse"](), "AI"];
     setInterval(() => {
       container.classList.remove(margins[index]);
 
-      index = (index + 1) % images.length; 
+      index = (index + 1) % images.length;
       const slide = images[index];
       const marginClass = margins[index];
 
       container.src = slide;
       container.classList.add(marginClass);
-
     }, 4000);
   }
 </script>
