--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -98,7 +98,7 @@ const navItems = [
       <Button className="w-full" text={m["navbar.signUp"]()} type="outline" />
     </a>
     <a class="sign-in-link">
-      <Button className="w-full" text={m["navbar.login"]()} />
+      <Button className="w-full" text={m["navbar."]()} />
     </a>
   </div>
 </div>
@@ -122,10 +122,10 @@ const navItems = [
     const signUpLink = document.getElementsByClassName("sign-up-link");
 
     for (const link of loginLink) {
-      link.href = `https://app.ionkol.com/${currentLang}/login`;
+      link.href = `https://app.ionkol.com/${currentLang}/sign-in`;
     }
     for (const link of signUpLink) {
-      link.href = `https://app.ionkol.com/${currentLang}/signup`;
+      link.href = `https://app.ionkol.com/${currentLang}/sign-up`;
     }
   }
 
