revert: auth links

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -122,10 +122,10 @@ const navItems = [
     const signUpLink = document.getElementsByClassName("sign-up-link");
 
     for (const link of loginLink) {
-      link.href = `https://app.ionkol.com/${currentLang}/login`;
+      link.href = `https://app.ionkol.com/${currentLang}/sign-in`;
     }
     for (const link of signUpLink) {
-      link.href = `https://app.ionkol.com/${currentLang}/signup`;
+      link.href = `https://app.ionkol.com/${currentLang}/sign-up`;
     }
   }
 
