fix: auth links

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -98,7 +98,7 @@ const navItems = [
       <Button className="w-full" text={m["navbar.signUp"]()} type="outline" />
     </a>
     <a class="sign-in-link">
-      <Button className="w-full" text={m["navbar."]()} />
+      <Button className="w-full" text={m["navbar.login"]()} />
     </a>
   </div>
 </div>
