--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -417,10 +417,12 @@ const stats = [
     </section>
 
     <section class="py-20 px-4 lg:px-12 animate-appear">
-      <div class="flex flex-col items-center space-y-14">
+      <div class="flex flex-col items-center space-y-6">
         <h2 class="text-center text-[62px] font-bold">
           <span class="text-[#EE7380]">{m["index.pricing.title"]()}</span>
         </h2>
+
+        <p>{m["pricing.pricesApplicable"]}</p>
 
         <div class="flex flex-col max-w-full items-center space-y-14">
           <Switcher />
