--- a/src/pages/[lang]/pricing.astro
+++ b/src/pages/[lang]/pricing.astro
@@ -102,11 +102,13 @@ import { m } from "../../paraglide/messages.js";
     </section>
 
     <section class="py-20 px-4 lg:px-12">
-      <div class="flex flex-col items-center space-y-14">
+      <div class="flex flex-col items-center space-y-6">
         <h2 class="text-center text-5xl font-bold">
           <span class="text-[#EE7380]">{m["pricing.subscription.title"]()}</span
           >
         </h2>
+
+        <p>{m["pricing.pricesApplicable"]}</p>
 
         <div class="flex flex-col items-center space-y-14">
           <Switcher />
