fix: sign-up links

--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -79,7 +79,7 @@ const titles = [m["main.explore"](), m["main.analyse"](), "AI"];
   <p class="font-normal tracking-wide mb-8 text-[42px]">
     {m["main.dataDriverSuccess"]()}
   </p>
-  <a href="https://app.ionkol.com/en/signup">
+  <a href="https://app.ionkol.com/en/sign-up">
     <button
       class="h-10 px-10 py-2 bg-[#EE7380] rounded-3xl text-white text-base font-medium leading-normal tracking-wide hover:bg-[#1a1a2e] active:bg-[#33334d] transition-colors duration-300"
     >
