--- a/src/pages/[lang]/pricing.astro
+++ b/src/pages/[lang]/pricing.astro
@@ -95,7 +95,7 @@ import { m } from "../../paraglide/messages.js";
           <span>{m["pricing.subtitle.part1"]()}</span>
           <span>{m["pricing.subtitle.part2"]()}</span>
         </div>
-        <a href="https://app.ionkol.com/signup">
+        <a href="https://app.ionkol.com/sign-up">
           <Button text={m["pricing.tryReport"]()} className="w-[345px]" />
         </a>
       </div>
@@ -115,7 +115,7 @@ import { m } from "../../paraglide/messages.js";
 
           <PriceCardsData client:load />
 
-          <a href="https://app.ionkol.com/signup">
+          <a href="https://app.ionkol.com/sign-up">
             <Button text={m["pricing.discoverMore"]()} />
           </a>
         </div>
