--- a/src/pages/[lang]/features.astro
+++ b/src/pages/[lang]/features.astro
@@ -176,7 +176,7 @@ const analyseTabs = [
             width={125}
             height={125}
           />
-          <a href="https://app.ionkol.com/signup">
+          <a href="https://app.ionkol.com/sign-up">
             <Button text={m["features.startNow"]()} className="w-[188px]" />
           </a>
         </div>
@@ -203,7 +203,7 @@ const analyseTabs = [
           <p class="text-xl text-center lg:text-left">
             {m["features.explore.description2"]()}
           </p>
-          <a href="https://app.ionkol.com/signup">
+          <a href="https://app.ionkol.com/sign-up">
             <Button text={m["features.startNow"]()} className="w-[188px]" />
           </a>
         </div>
@@ -234,7 +234,7 @@ const analyseTabs = [
             {m["features.analyse.description"]()}
           </p>
 
-          <a href="https://app.ionkol.com/signup">
+          <a href="https://app.ionkol.com/sign-up">
             <Button text={m["features.startNow"]()} className="w-[188px]" />
           </a>
         </div>
